sdk-docs_versioned_docs/version-22.0.x/enums/Generated/Types/AssetTx/AssetTx.md
---
id: "AssetTx"
title: "Enumeration: AssetTx"
sidebar_label: "AssetTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).AssetTx

## Enumeration Members

### AcceptAssetOwnershipTransfer

• **AcceptAssetOwnershipTransfer** = ``"asset.acceptAssetOwnershipTransfer"``

#### Defined in

[generated/types.ts:505](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L505)

___

### AcceptTickerTransfer

• **AcceptTickerTransfer** = ``"asset.acceptTickerTransfer"``

#### Defined in

[generated/types.ts:504](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L504)

___

### AddDocuments

• **AddDocuments** = ``"asset.addDocuments"``

#### Defined in

[generated/types.ts:513](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L513)

___

### ClaimClassicTicker

• **ClaimClassicTicker** = ``"asset.claimClassicTicker"``

#### Defined in

[generated/types.ts:517](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L517)

___

### ControllerTransfer

• **ControllerTransfer** = ``"asset.controllerTransfer"``

#### Defined in

[generated/types.ts:519](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L519)

___

### CreateAsset

• **CreateAsset** = ``"asset.createAsset"``

#### Defined in

[generated/types.ts:506](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L506)

___

### CreateAssetWithCustomType

• **CreateAssetWithCustomType** = ``"asset.createAssetWithCustomType"``

#### Defined in

[generated/types.ts:521](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L521)

___

### ExemptTickerAffirmation

• **ExemptTickerAffirmation** = ``"asset.exemptTickerAffirmation"``

#### Defined in

[generated/types.ts:531](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L531)

___

### Freeze

• **Freeze** = ``"asset.freeze"``

#### Defined in

[generated/types.ts:507](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L507)

___

### Issue

• **Issue** = ``"asset.issue"``

#### Defined in

[generated/types.ts:510](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L510)

___

### MakeDivisible

• **MakeDivisible** = ``"asset.makeDivisible"``

#### Defined in

[generated/types.ts:512](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L512)

___

### PreApproveTicker

• **PreApproveTicker** = ``"asset.preApproveTicker"``

#### Defined in

[generated/types.ts:533](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L533)

___

### Redeem

• **Redeem** = ``"asset.redeem"``

#### Defined in

[generated/types.ts:511](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L511)

___

### RedeemFromPortfolio

• **RedeemFromPortfolio** = ``"asset.redeemFromPortfolio"``

#### Defined in

[generated/types.ts:527](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L527)

___

### RegisterAndSetLocalAssetMetadata

• **RegisterAndSetLocalAssetMetadata** = ``"asset.registerAndSetLocalAssetMetadata"``

#### Defined in

[generated/types.ts:524](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L524)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"asset.registerAssetMetadataGlobalType"``

#### Defined in

[generated/types.ts:526](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L526)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"asset.registerAssetMetadataLocalType"``

#### Defined in

[generated/types.ts:525](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L525)

___

### RegisterCustomAssetType

• **RegisterCustomAssetType** = ``"asset.registerCustomAssetType"``

#### Defined in

[generated/types.ts:520](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L520)

___

### RegisterTicker

• **RegisterTicker** = ``"asset.registerTicker"``

#### Defined in

[generated/types.ts:503](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L503)

___

### RemoveDocuments

• **RemoveDocuments** = ``"asset.removeDocuments"``

#### Defined in

[generated/types.ts:514](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L514)

___

### RemoveLocalMetadataKey

• **RemoveLocalMetadataKey** = ``"asset.removeLocalMetadataKey"``

#### Defined in

[generated/types.ts:529](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L529)

___

### RemoveMetadataValue

• **RemoveMetadataValue** = ``"asset.removeMetadataValue"``

#### Defined in

[generated/types.ts:530](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L530)

___

### RemoveTickerAffirmationExemption

• **RemoveTickerAffirmationExemption** = ``"asset.removeTickerAffirmationExemption"``

#### Defined in

[generated/types.ts:532](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L532)

___

### RemoveTickerPreApproval

• **RemoveTickerPreApproval** = ``"asset.removeTickerPreApproval"``

#### Defined in

[generated/types.ts:534](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L534)

___

### RenameAsset

• **RenameAsset** = ``"asset.renameAsset"``

#### Defined in

[generated/types.ts:509](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L509)

___

### ReserveClassicTicker

• **ReserveClassicTicker** = ``"asset.reserveClassicTicker"``

#### Defined in

[generated/types.ts:518](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L518)

___

### SetAssetMetadata

• **SetAssetMetadata** = ``"asset.setAssetMetadata"``

#### Defined in

[generated/types.ts:522](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L522)

___

### SetAssetMetadataDetails

• **SetAssetMetadataDetails** = ``"asset.setAssetMetadataDetails"``

#### Defined in

[generated/types.ts:523](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L523)

___

### SetFundingRound

• **SetFundingRound** = ``"asset.setFundingRound"``

#### Defined in

[generated/types.ts:515](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L515)

___

### Unfreeze

• **Unfreeze** = ``"asset.unfreeze"``

#### Defined in

[generated/types.ts:508](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L508)

___

### UpdateAssetType

• **UpdateAssetType** = ``"asset.updateAssetType"``

#### Defined in

[generated/types.ts:528](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L528)

___

### UpdateIdentifiers

• **UpdateIdentifiers** = ``"asset.updateIdentifiers"``

#### Defined in

[generated/types.ts:516](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L516)
